adding fast Pablo (not yet ready)

--- a/Principal_Symbol.ipynb
+++ b/Principal_Symbol.ipynb
@@ -8,6 +8,18 @@
     "\n",
     "Código para testear la estabilidad alrededor de una solución de equilibrio.\n",
     "\n",
+    "Las ecuaciones son:\n",
+    "\n",
+    "$(\\zeta^a, \\zeta^{ab})$ -> $f^j = (\\mu, v, x_i)$ -> $(-1,0,0,0,0)$\n",
+    "\n",
+    "$$\n",
+    "\\partial_t c^j = \\partial_i F^{ij}(f) + I^j(f) = \\frac{\\partial F^{ij}}{\\partial f^k}\\partial_i f^k\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "c^j = C^j(f) = (e, S, c_i)\n",
+    "$$\n",
+    "\n",
     "Lo que hacemos es tomar el jacobiano del flujo,\n",
     "\n",
     "$\\frac{\\partial F^i}{\\partial f^j}$ donde $f^j$ son las variables no conservativas para las cuales tenemos las expresiones del Flujo. \n",
@@ -15,7 +27,7 @@
     "Tenemos así \n",
     "\n",
     "$$\n",
-    "P^i{}_j := \\frac{\\partial F^i}{\\partial c^j}.\n",
+    "P^{il}{}_j := \\frac{\\partial F^{il}}{\\partial c^j} = \\frac{\\partial F^{il}}{\\partial f^k}\\frac{\\partial f^k}{\\partial c^j}.\n",
     "$$\n",
     "\n",
     "Evaluamos todo en el vector $(-1,0,0,0,0)$ o sea estamos en el frame con velocidad cero y todas las variables fuera de equilibrio también cero.\n",
@@ -127,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +171,7 @@
        " -5.0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +220,7 @@
        "  0.0            -3.0p₂     -0.0    -36.0p₃     -0.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +281,7 @@
        " -3.0p₂"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +319,7 @@
        "  -7.5p₂           0.0    -12p₃       -0.0    -12p₃"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +339,7 @@
        "P (generic function with 1 method)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +377,7 @@
        "                   0.0                                                                -0.0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +409,7 @@
        " 0.0  0.0        0.0   1.33333    0.0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +441,7 @@
        " 0//1  0//1   0//1  4//3   0//1"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +470,7 @@
        " 0.0  0.0  0.0   0.0          0.0"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +495,7 @@
        "  0.7745966692414837"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +515,7 @@
        "-1.5543122344752192e-15"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +535,7 @@
        "-8.881784197001252e-16"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +560,7 @@
        "  0.8013317157511908"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +587,7 @@
        "Is (generic function with 1 method)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +644,7 @@
        " 1.3877787807814457e-17"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +686,7 @@
        " 3.141592653589793f₅*(f₁^-4)*(p₁^-1)*(p₂^2)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)) - (94.24777960769379f₂*f₄*(f₁^-5)*(p₁^-1)*(p₂^2)*(abs(f₁)^(1//2))*((1.0 - (f₂^2))^(-1//2))) - (3.141592653589793f₃*(f₁^-4)*(p₁^-1)*(p₂^2)*((-1//10) - ((2//5)*(f₂^2)*((1.0 - (f₂^2))^(-1//1))))*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)))"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +735,7 @@
        " 0.0  0.0  0.314159(p₁^-1)*(p₂^2)     3.14159(p₁^-1)*(p₂^2)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +757,7 @@
        "II (generic function with 1 method)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +795,7 @@
        " 0.0  0.0     -0.261799(p₁^-1)*(p₂^2)*(p₃^-1)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,28 +806,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{ComplexF64}:\n",
-       "   -0.003948272549998108 - 1.9686487478300475e-16im\n",
-       " -0.00010115664332310814 + 5.78847409830599im\n",
-       "   -0.000101156643319758 - 5.788474098305988im\n",
-       "    0.008449711345489656 - 7.744246264571347im\n",
-       "    0.008449711345490218 + 7.74424626457135im"
+       " -0.11301691918814528 - 7.787047557939531im\n",
+       " -0.11301691918814516 + 7.787047557939534im\n",
+       "  0.01184373175810658 + 5.91206663305465im\n",
+       "  0.01184373175810672 - 5.912066633054651im\n",
+       "  0.04146452320944856 + 2.4005330432720572e-17im"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "par = [-1,-0.5,-10]\n",
-    "eigvals(10*im .* P(flu,c,par) + II(flu,c,par))"
+    "par = [-1,-0.5,-1]\n",
+    "eigvals(10*im .* P(flu,c,par) - II(flu,c,par))"
    ]
   },
   {
@@ -827,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +853,7 @@
        " 1.0  0.000559805  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +878,7 @@
        " 0.536887-0.000396152im  0.536887+0.000396152im        0.668402+0.0im"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +903,7 @@
        " -0.3333322546096297 + 1.474514954580286e-16im"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +928,7 @@
        "  0.0+0.0im       0.0+0.0833333im     0.00654498+0.0im"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
