adding changes in the source function, now seems to be working.

--- a/Principal_Symbol.ipynb
+++ b/Principal_Symbol.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,28 +578,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Is (generic function with 1 method)"
+       "Is (generic function with 2 methods)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function Is(flu,par)\n",
-    "    χ = par #only used to test otherwise are defined below. a is and amplitude to change I from outside\n",
+    "function Is(flu, χ, ξ)\n",
+    "    #(χ, ξ) = par \n",
     "    μ = flu[1] \n",
     "    χ₀= χ[1]\n",
     "    χ₁= -χ[2] # lo hacemos positivo\n",
-    "    κ = χ₀*μ^5/(15π*χ₁^2) # OK \n",
-    "    λ = -χ₀*μ^4/(1π*χ₁^2)   # OK\n",
+    "    κ = χ₀*μ^5*ξ[1]/χ₁^2 # OK \n",
+    "    λ = -χ₀*μ^4*ξ[2]/χ₁^2  # OK\n",
+    "    η = χ₀*μ^3*ξ[3]/χ₁^2\n",
     "    T = (abs(μ))^(-1//2) # use μ positive, so I changed μ -> -μ\n",
     "    v = flu[2]\n",
     "    x1 = flu[3]\n",
@@ -614,9 +615,12 @@
     "    #return Is[:]      #(1 - ℯ^(-5. *t))\n",
     "    return [0.;\n",
     "            0.;\n",
-    "            -2//5*(γ^2-1//4)*T*x1/(γ*λ) - 2γ*v*x2/T/κ - v^2*T*x3/(γ*λ);\n",
-    "            -2//5*γ*v*T*x1/λ - γ*(v^2+1)*x2/T/κ - v*T*x3/(γ*λ);\n",
-    "            -2//5*(γ^2*v^2+1//4)*T*x1/λ/γ - 2γ*v*x2/T/κ - T*x3/(γ*λ)\n",
+    "            -2//5*(γ^2-1//4)*T*x1/(γ*λ) - 2γ*v*x2/T/κ - v^2*T*x3/(γ*η);\n",
+    "            -2//5*γ*v*T*x1/λ - γ*(v^2+1)*x2/T/κ - v*T*x3/(γ*η);\n",
+    "            -2//5*(γ^2*v^2+1//4)*T*x1/η/γ - 2γ*v*x2/T/κ + T*x3/(γ*η)\n",
+    "            #-2//5*(γ^2-1//4)*T*x1/(γ*λ) - 2γ*v*x2/T/κ - v^2*T*x3/(γ*λ);\n",
+    "            #-2//5*γ*v*T*x1/λ - γ*(v^2+1)*x2/T/κ - v*T*x3/(γ*λ);\n",
+    "            #-2//5*(γ^2*v^2+1//4)*T*x1/λ/γ - 2γ*v*x2/T/κ - T*x3/(γ*λ)\n",
     "            ]\n",
     "end"
    ]
@@ -630,21 +634,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{Float64}:\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 1.3877787807814457e-17\n",
-       " 1.3877787807814457e-17\n",
-       " 1.3877787807814457e-17"
+       "  0.0\n",
+       "  0.0\n",
+       " -0.039714184795133584\n",
+       " -0.0794283695902672\n",
+       "  0.22302240245737776"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,13 +657,14 @@
     "t=0\n",
     "flu = [- 5.; 0.5; 2.1; 0.5; 5.1]\n",
     "par = [-1., -2., -10.]\n",
+    "par_s = [1/15π, 1/1π, 1/1π]\n",
     "I_c = [0.; 0.; - 0.09488575328013785; - 0.12155655385334033; - 0.12140081195218293]\n",
-    "Is(flu,par) - I_c"
+    "Is(flu,par,par_s) - I_c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -670,72 +675,76 @@
        "\\begin{array}{c}\n",
        "0.0 \\\\\n",
        "0.0 \\\\\n",
-       " - \\frac{94.24777960769379 \\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_2}^{2} f{_2} f{_4}}{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_1} f{_1}^{5}} - \\frac{3.141592653589793 \\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_3} \\left( \\frac{1}{10} - \\frac{\\frac{2}{5}}{\\left( 1.0 - f{_2}^{2} \\right)} \\right)}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_1} f{_1}^{4}} + \\frac{3.141592653589793 \\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_2}^{2} f{_5}}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_1} f{_1}^{4}} \\\\\n",
-       "\\frac{1.2566370614359172 p{_2}^{2} f{_2} f{_3}}{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} \\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_1} f{_1}^{4}} + \\frac{3.141592653589793 \\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_2} f{_5}}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_1} f{_1}^{4}} - \\frac{47.12388980384689 \\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_2}^{2} f{_4} \\left( 1 + f{_2}^{2} \\right)}{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_1} f{_1}^{5}} \\\\\n",
-       "\\frac{3.141592653589793 \\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_5}}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_1} f{_1}^{4}} - \\frac{94.24777960769379 \\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_2}^{2} f{_2} f{_4}}{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_1} f{_1}^{5}} - \\frac{3.141592653589793 \\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_3} \\left( \\frac{-1}{10} - \\frac{\\frac{2}{5} f{_2}^{2}}{\\left( 1.0 - f{_2}^{2} \\right)} \\right)}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_1} f{_1}^{4}} \\\\\n",
+       " - \\frac{2 \\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_2}^{2} f{_2} f{_4}}{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} q{_1} p{_1} f{_1}^{5}} - \\frac{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_3} \\left( \\frac{1}{10} - \\frac{\\frac{2}{5}}{\\left( 1.0 - f{_2}^{2} \\right)} \\right)}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} q{_2} p{_1} f{_1}^{4}} - \\frac{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_2}^{2} f{_5}}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} q{_3} p{_1} f{_1}^{3}} \\\\\n",
+       "\\frac{\\frac{2}{5} p{_2}^{2} f{_2} f{_3}}{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} \\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} q{_2} p{_1} f{_1}^{4}} - \\frac{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_2} f{_5}}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} q{_3} p{_1} f{_1}^{3}} - \\frac{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_2}^{2} f{_4} \\left( 1 + f{_2}^{2} \\right)}{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} q{_1} p{_1} f{_1}^{5}} \\\\\n",
+       "\\frac{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_5}}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} q{_3} p{_1} f{_1}^{3}} + \\frac{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_3} \\left( \\frac{-1}{10} - \\frac{\\frac{2}{5} f{_2}^{2}}{\\left( 1.0 - f{_2}^{2} \\right)} \\right)}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} q{_3} p{_1} f{_1}^{3}} - \\frac{2 \\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_2}^{2} f{_2} f{_4}}{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} q{_1} p{_1} f{_1}^{5}} \\\\\n",
        "\\end{array}\n",
        "\\right]\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
        "5-element Vector{Num}:\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 3.141592653589793f₅*(f₁^-4)*(f₂^2)*(p₁^-1)*(p₂^2)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)) - (94.24777960769379f₂*f₄*(f₁^-5)*(p₁^-1)*(p₂^2)*(abs(f₁)^(1//2))*((1.0 - (f₂^2))^(-1//2))) - (3.141592653589793f₃*(f₁^-4)*(p₁^-1)*(p₂^2)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2))*((1//10) - ((2//5)*((1.0 - (f₂^2))^(-1//1)))))\n",
-       " 1.2566370614359172f₂*f₃*(f₁^-4)*(p₁^-1)*(p₂^2)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(-1//2)) + 3.141592653589793f₂*f₅*(f₁^-4)*(p₁^-1)*(p₂^2)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)) - (47.12388980384689f₄*(f₁^-5)*(p₁^-1)*(p₂^2)*(abs(f₁)^(1//2))*(1 + f₂^2)*((1.0 - (f₂^2))^(-1//2)))\n",
-       " 3.141592653589793f₅*(f₁^-4)*(p₁^-1)*(p₂^2)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)) - (94.24777960769379f₂*f₄*(f₁^-5)*(p₁^-1)*(p₂^2)*(abs(f₁)^(1//2))*((1.0 - (f₂^2))^(-1//2))) - (3.141592653589793f₃*(f₁^-4)*(p₁^-1)*(p₂^2)*((-1//10) - ((2//5)*(f₂^2)*((1.0 - (f₂^2))^(-1//1))))*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)))"
+       "        0.0\n",
+       "        0.0\n",
+       " (-2//1)*f₂*f₄*(f₁^-5)*(p₁^-1)*(p₂^2)*(q₁^-1)*(abs(f₁)^(1//2))*((1.0 - (f₂^2))^(-1//2)) - (f₃*(f₁^-4)*(p₁^-1)*(p₂^2)*(q₂^-1)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2))*((1//10) - ((2//5)*((1.0 - (f₂^2))^(-1//1))))) - (f₅*(f₁^-3)*(f₂^2)*(p₁^-1)*(p₂^2)*(q₃^-1)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)))\n",
+       "  (2//5)*f₂*f₃*(f₁^-4)*(p₁^-1)*(p₂^2)*(q₂^-1)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(-1//2)) - (f₂*f₅*(f₁^-3)*(p₁^-1)*(p₂^2)*(q₃^-1)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2))) - (f₄*(f₁^-5)*(p₁^-1)*(p₂^2)*(q₁^-1)*(abs(f₁)^(1//2))*(1 + f₂^2)*((1.0 - (f₂^2))^(-1//2)))\n",
+       "         f₅*(f₁^-3)*(p₁^-1)*(p₂^2)*(q₃^-1)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)) + f₃*(f₁^-3)*(p₁^-1)*(p₂^2)*(q₃^-1)*((-1//10) - ((2//5)*(f₂^2)*((1.0 - (f₂^2))^(-1//1))))*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)) - ((2//1)*f₂*f₄*(f₁^-5)*(p₁^-1)*(p₂^2)*(q₁^-1)*(abs(f₁)^(1//2))*((1.0 - (f₂^2))^(-1//2)))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Is(f,p)"
+    "@variables q[1:3]  \n",
+    "Is(f,p,q)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
-    "JSS = Symbolics.jacobian(Is(f,p),f);\n",
-    "JS_exp = Symbolics.build_function(JSS, f, p);\n",
+    "JSS = Symbolics.jacobian(Is(f,p,q),f);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "JS_exp = Symbolics.build_function(JSS, f, p,q);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "JSac = eval(JS_exp[1]);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "\\begin{equation}\n",
-       "\\left[\n",
-       "\\begin{array}{ccccc}\n",
-       "0 & 0 & 0 & 0 & 0 \\\\\n",
-       "0 & 0 & 0 & 0 & 0 \\\\\n",
-       "0.0 & 0.0 & \\frac{0.942477796076938 p{_2}^{2}}{p{_1}} & -0.0 & 0.0 \\\\\n",
-       "0.0 & 0.0 & 0.0 &  - \\frac{47.12388980384689 p{_2}^{2}}{p{_1}} & 0.0 \\\\\n",
-       "0.0 & 0.0 & \\frac{0.3141592653589793 p{_2}^{2}}{p{_1}} & -0.0 & \\frac{3.141592653589793 p{_2}^{2}}{p{_1}} \\\\\n",
-       "\\end{array}\n",
-       "\\right]\n",
-       "\\end{equation}\n"
-      ],
       "text/plain": [
-       "5×5 Matrix{Num}:\n",
-       " 0    0    0                       …  0\n",
-       " 0    0    0                          0\n",
-       " 0.0  0.0  0.942478(p₁^-1)*(p₂^2)     0.0\n",
-       " 0.0  0.0  0.0                        0.0\n",
-       " 0.0  0.0  0.314159(p₁^-1)*(p₂^2)     3.14159(p₁^-1)*(p₂^2)"
+       "5×5 Matrix{Float64}:\n",
+       " 0.0  0.0   0.0        0.0      0.0\n",
+       " 0.0  0.0   0.0        0.0      0.0\n",
+       " 0.0  0.0  -3.76991    0.0      0.0\n",
+       " 0.0  0.0  -0.0      188.496    0.0\n",
+       " 0.0  0.0   1.25664    0.0    -12.5664"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,91 +752,89 @@
    "source": [
     "flu=[1.;0;0;0;0];\n",
     "con=ones(5)\n",
-    "JSac(flu,p)"
+    "\n",
+    "JSac(flu,par,par_s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "II (generic function with 1 method)"
+       "II (generic function with 2 methods)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "II(flu,c,p) = Jac(flu,c,p) \\ JSac(flu,p)"
+    "II(flu,c,p,q) = Jac(flu,c,p) \\ JSac(flu,p,q)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 220,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "\\begin{equation}\n",
-       "\\left[\n",
-       "\\begin{array}{ccccc}\n",
-       "0 & 0 & \\frac{0.471238898038469 p{_2}^{3}}{\\left(  - 36.0 p{_3} - \\frac{3.75 p{_2}^{2}}{p{_1}} \\right) p{_1}^{2}} & 0 & 0 \\\\\n",
-       "0 & 0 & 0 &  - \\frac{58.90486225480862 p{_2}^{2}}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right) p{_1}} & 0 \\\\\n",
-       "0.0 & 0.0 & \\frac{0.942477796076938 p{_2}^{2}}{\\left(  - 36.0 p{_3} - \\frac{3.75 p{_2}^{2}}{p{_1}} \\right) p{_1}} & -0.0 & 0.0 \\\\\n",
-       "0.0 & 0.0 & 0.0 &  - \\frac{47.12388980384689 p{_2}^{2}}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right) p{_1}} & 0.0 \\\\\n",
-       "0.0 & 0.0 &  - \\frac{\\frac{1}{12} \\left( \\frac{0.3141592653589793 p{_2}^{2}}{p{_1}} - \\frac{0.942477796076938 p{_2}^{2} \\left(  - 12 p{_3} - \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left(  - 36.0 p{_3} - \\frac{3.75 p{_2}^{2}}{p{_1}} \\right) p{_1}} \\right)}{p{_3}} & -0.0 &  - \\frac{0.2617993877991494 p{_2}^{2}}{p{_3} p{_1}} \\\\\n",
-       "\\end{array}\n",
-       "\\right]\n",
-       "\\end{equation}\n"
-      ],
-      "text/plain": [
-       "5×5 Matrix{Num}:\n",
-       " 0    0    …   0\n",
-       " 0    0        0\n",
-       " 0.0  0.0      0.0\n",
-       " 0.0  0.0      0.0\n",
-       " 0.0  0.0     -0.261799(p₁^-1)*(p₂^2)*(p₃^-1)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "II(flu,c,p)"
+    "II(flu,c,p,q);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{ComplexF64}:\n",
-       " -0.11301691918814528 - 7.787047557939531im\n",
-       " -0.11301691918814516 + 7.787047557939534im\n",
-       "  0.01184373175810658 + 5.91206663305465im\n",
-       "  0.01184373175810672 - 5.912066633054651im\n",
-       "  0.04146452320944856 + 2.4005330432720572e-17im"
+       "     -0.4034721581221814 - 1.664125310078936e-16im\n",
+       "     -0.1157559089611886 - 7.736526334019546im\n",
+       "    -0.11575590896118837 + 7.736526334019548im\n",
+       " -0.00011033595199627655 + 5.788479532897586im\n",
+       " -0.00011033595199562604 - 5.788479532897584im"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "par = [-1,-0.5,-1]\n",
-    "eigvals(10*im .* P(flu,c,par) - II(flu,c,par))"
+    "par_f = [-1,-0.5,-10]\n",
+    "par_s = [-1/15π, -1/1π, -0.01/1π]\n",
+    "eigvals(10*im .* P(flu,c,par_f) - 1. .* II(flu,c,par_f,par_s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Float64}:\n",
+       " -6.544984694978735\n",
+       " -0.019946620022792336\n",
+       " -0.0006527984734732038\n",
+       " -0.0\n",
+       "  0.0"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eigvals(- II(flu,c,par_f,par_s))"
    ]
   },
   {
@@ -839,71 +846,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×5 Matrix{Float64}:\n",
-       " 0.0  0.242536     1.0  0.0  0.0\n",
-       " 0.0  0.0          0.0  1.0  0.780869\n",
-       " 0.0  0.970142     0.0  0.0  0.0\n",
-       " 0.0  0.0          0.0  0.0  0.624695\n",
-       " 1.0  0.000559805  0.0  0.0  0.0"
+       "  0.242519   1.0  0.0  0.0  0.0\n",
+       "  0.0        0.0  1.0  0.0  0.780869\n",
+       "  0.970074   0.0  0.0  0.0  0.0\n",
+       "  0.0        0.0  0.0  0.0  0.624695\n",
+       " -0.0118436  0.0  0.0  1.0  0.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eigvecs(II(flu,c,par))"
+    "eigvecs(II(flu,c,par_f,par_s))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×5 Matrix{ComplexF64}:\n",
-       " 0.337035-0.000948961im  0.337035+0.000948961im  …    -0.333332+1.47451e-16im\n",
-       "  0.20085+0.00135487im   -0.20085+0.00135487im      2.97604e-16+6.66709e-5im\n",
-       " 0.676377+0.0im          0.676377+0.0im               -0.664928+6.59195e-17im\n",
-       "  0.31675+0.000372305im  -0.31675+0.000372305im     1.15372e-16+0.000132508im\n",
-       " 0.536887-0.000396152im  0.536887+0.000396152im        0.668402+0.0im"
+       "  0.829725+0.0im        0.829725+0.0im        …      0.816248+0.0im\n",
+       "   0.28866+0.03163im    -0.28866+0.03163im       -8.30499e-17+0.00187766im\n",
+       "  0.366886-0.0224012im  0.366886+0.0224012im         0.391071+9.36751e-17im\n",
+       " -0.167697+0.0137421im  0.167697+0.0137421im     -1.34306e-17-0.000912069im\n",
+       "  0.252111-0.0158919im  0.252111+0.0158919im        -0.425203-2.63678e-16im"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "E = eigvecs(10*im .* P(flu,c,par) - II(flu,c,par))"
+    "E = eigvecs(10*im .* P(flu,c,par) - II(flu,c,par_f,par_s))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{ComplexF64}:\n",
-       " 0.33703509501333395 - 0.0009489605368876997im\n",
-       " 0.33703509501333356 + 0.0009489605368884178im\n",
-       "   0.764720751926126 + 0.0im\n",
-       "  0.7647207519261257 + 0.0im\n",
-       " -0.3333322546096297 + 1.474514954580286e-16im"
+       " 0.8297253709033151 + 0.0im\n",
+       " 0.8297253709033148 + 0.0im\n",
+       " 0.8196443138602574 + 0.0im\n",
+       " 0.8196443138602573 + 0.0im\n",
+       " 0.8162483372537112 + 0.0im"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,27 +921,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×5 Matrix{ComplexF64}:\n",
-       "  0.0-0.0im       0.0-6.66667im    …         0.0-0.0im\n",
-       " -0.0-5.05291im   0.0+0.0im                  0.0+1.26984im\n",
-       "  0.0+0.0im       0.0+0.0im                  0.0+0.0im\n",
-       " -0.0-0.042328im  0.0+0.0im                  0.0+2.01587im\n",
-       "  0.0+0.0im       0.0+0.0833333im     0.00654498+0.0im"
+       "  0.0+0.0im        0.0-6.66667im     0.00159472+0.0im  …        0.0+0.0im\n",
+       " -0.0-5.22222im   -0.0-0.0im                0.0+8.0im          -0.0-2.66667im\n",
+       "  0.0+0.0im        0.0+0.0im         0.00637887+0.0im           0.0+0.0im\n",
+       " -0.0-0.177778im   0.0+0.0im                0.0+2.4im           0.0+1.86667im\n",
+       "  0.0+0.0im        0.0+0.333333im  -0.000332233+0.0im     0.0654498+0.0im"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "10*im .* P(flu,c,par) - II(flu,c,par)"
+    "10*im .* P(flu,c,par) - II(flu,c,par_f,par_s)"
    ]
   },
   {
