--- a/test_Flux_function.ipynb
+++ b/test_Flux_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "Speed_max (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,9 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.284062 seconds (793.05 k allocations: 47.065 MiB, 6.07% gc time, 99.96% compilation time)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -41,7 +48,7 @@
        "  0.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,14 +58,62 @@
     "flu = [0.;0.;0.;0.;0.;- 5.; 0.5; 2.1; 0.5; 5.1]\n",
     "Flu = [5.921317694643806; 6.02302807825841; 3.713391378258412;  4.136735467078638; 3.444079555898864; 0.;0.;0.;0.;0.]\n",
     "\n",
-    "Flux(flu,χ) + Flu # this are the correct signs so that the flux has the correct expression on the mp5"
+    "@time Flux(flu,χ) + Flu # this are the correct signs so that the flux has the correct expression on the mp5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.068470 seconds (262.27 k allocations: 15.908 MiB, 24.23% gc time, 99.96% compilation time)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10-element Vector{Float64}:\n",
+       "  0.0\n",
+       " -8.881784197001252e-16\n",
+       "  8.881784197001252e-16\n",
+       "  0.0\n",
+       " -4.440892098500626e-16\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "χ = [- 1.; - 2.; - 10.]\n",
+    "flu = [0.;0.;0.;0.;0.;- 5.; 0.5; 2.1; 0.5; 5.1]\n",
+    "Flu = [5.921317694643806; 6.02302807825841; 3.713391378258412;  4.136735467078638; 3.444079555898864; 0.;0.;0.;0.;0.]\n",
+    "F = zeros(10)\n",
+    "@time Flux!(F,flu,χ) + Flu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.110966 seconds (396.11 k allocations: 23.780 MiB, 99.90% compilation time)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -75,31 +130,59 @@
        " 0.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "t=0\n",
-    "par = ([-1., -2., -10.], -1)\n",
+    "par = ([-1., -2., -10.], [1/15π, 1/1π, 1])\n",
     "I_c = [0.; 0.; - 0.09488575328013785; - 0.12155655385334033; - 0.12140081195218293; 0.;0.;0.;0.;0.]\n",
-    "Is(flu,t,par) - I_c"
+    "@time Is(flu,t,par) - I_c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.063670 seconds (162.21 k allocations: 10.210 MiB, 20.28% gc time, 99.96% compilation time)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10-element Vector{Float64}:\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 1.3877787807814457e-17\n",
+       " 1.3877787807814457e-17\n",
+       " 1.3877787807814457e-17\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t=0\n",
+    "par = ([-1., -2., -10.], [1/15π, 1/1π, 1])\n",
+    "S = zeros(10)\n",
+    "I_c = [0.; 0.; - 0.09488575328013785; - 0.12155655385334033; - 0.12140081195218293; 0.;0.;0.;0.;0.]\n",
+    "@time Is!(S,flu,t,par) \n",
+    "S - I_c"
+   ]
   }
  ],
  "metadata": {
