--- a/Principal_Symbol.ipynb
+++ b/Principal_Symbol.ipynb
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "Is (generic function with 2 methods)"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,9 +598,9 @@
     "    μ = flu[1] \n",
     "    χ₀= χ[1]\n",
     "    χ₁= -χ[2] # lo hacemos positivo\n",
-    "    κ = χ₀*μ^5*ξ[1]/χ₁^2 # OK \n",
-    "    λ = -χ₀*μ^4*ξ[2]/χ₁^2  # OK\n",
-    "    η = χ₀*μ^3*ξ[3]/χ₁^2\n",
+    "    κ = χ₀*ξ[1]/χ₁^2 # OK \n",
+    "    λ = χ₀*ξ[2]/χ₁^2  # OK\n",
+    "    η = χ₀*ξ[3]/χ₁^2\n",
     "    T = (abs(μ))^(-1//2) # use μ positive, so I changed μ -> -μ\n",
     "    v = flu[2]\n",
     "    x1 = flu[3]\n",
@@ -615,9 +615,12 @@
     "    #return Is[:]      #(1 - ℯ^(-5. *t))\n",
     "    return [0.;\n",
     "            0.;\n",
-    "            -2//5*(γ^2-1//4)*T*x1/(γ*λ) - 2γ*v*x2/T/κ - v^2*T*x3/(γ*η);\n",
-    "            -2//5*γ*v*T*x1/λ - γ*(v^2+1)*x2/T/κ - v*T*x3/(γ*η);\n",
-    "            -2//5*(γ^2*v^2+1//4)*T*x1/η/γ - 2γ*v*x2/T/κ + T*x3/(γ*η)\n",
+    "            -(3//10*(γ^2-1//4)*x1/(γ*λ) + 2γ*v*x2/κ - v^2*x3/(γ*η))/μ^4/T;\n",
+    "            -(3//10*γ*v*x1/λ + γ*(v^2+1)*x2/κ - v*x3/(γ*η))/μ^4/T;\n",
+    "            -(3//10*(γ^2*v^2+1//4)*x1/λ/γ + 2γ*v*x2/κ - x3/(γ*η))/μ^4/T;\n",
+    "            #-2//5*(γ^2-1//4)*T*x1/(γ*λ) - 2γ*v*x2/T/κ - v^2*T*x3/(γ*η);\n",
+    "            #-2//5*γ*v*T*x1/λ - γ*(v^2+1)*x2/T/κ - v*T*x3/(γ*η);\n",
+    "            #-2//5*(γ^2*v^2+1//4)*T*x1/η/γ - 2γ*v*x2/T/κ + T*x3/(γ*η)\n",
     "            #-2//5*(γ^2-1//4)*T*x1/(γ*λ) - 2γ*v*x2/T/κ - v^2*T*x3/(γ*λ);\n",
     "            #-2//5*γ*v*T*x1/λ - γ*(v^2+1)*x2/T/κ - v*T*x3/(γ*λ);\n",
     "            #-2//5*(γ^2*v^2+1//4)*T*x1/λ/γ - 2γ*v*x2/T/κ - T*x3/(γ*λ)\n",
@@ -634,21 +637,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{Float64}:\n",
-       "  0.0\n",
-       "  0.0\n",
-       " -0.039714184795133584\n",
-       " -0.0794283695902672\n",
-       "  0.22302240245737776"
+       " 0.0\n",
+       " 0.0\n",
+       " 0.4611712370646667\n",
+       " 0.5253174326038652\n",
+       " 0.32649342803881654"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,46 +667,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 261,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "\\begin{equation}\n",
-       "\\left[\n",
-       "\\begin{array}{c}\n",
-       "0.0 \\\\\n",
-       "0.0 \\\\\n",
-       " - \\frac{2 \\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_2}^{2} f{_2} f{_4}}{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} q{_1} p{_1} f{_1}^{5}} - \\frac{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_3} \\left( \\frac{1}{10} - \\frac{\\frac{2}{5}}{\\left( 1.0 - f{_2}^{2} \\right)} \\right)}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} q{_2} p{_1} f{_1}^{4}} - \\frac{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_2}^{2} f{_5}}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} q{_3} p{_1} f{_1}^{3}} \\\\\n",
-       "\\frac{\\frac{2}{5} p{_2}^{2} f{_2} f{_3}}{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} \\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} q{_2} p{_1} f{_1}^{4}} - \\frac{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_2} f{_5}}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} q{_3} p{_1} f{_1}^{3}} - \\frac{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_2}^{2} f{_4} \\left( 1 + f{_2}^{2} \\right)}{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} q{_1} p{_1} f{_1}^{5}} \\\\\n",
-       "\\frac{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_5}}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} q{_3} p{_1} f{_1}^{3}} + \\frac{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} p{_2}^{2} f{_3} \\left( \\frac{-1}{10} - \\frac{\\frac{2}{5} f{_2}^{2}}{\\left( 1.0 - f{_2}^{2} \\right)} \\right)}{\\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} q{_3} p{_1} f{_1}^{3}} - \\frac{2 \\left( \\left\\|f{_1}\\right\\| \\right)^{\\frac{1}{2}} p{_2}^{2} f{_2} f{_4}}{\\left( 1.0 - f{_2}^{2} \\right)^{\\frac{1}{2}} q{_1} p{_1} f{_1}^{5}} \\\\\n",
-       "\\end{array}\n",
-       "\\right]\n",
-       "\\end{equation}\n"
-      ],
-      "text/plain": [
-       "5-element Vector{Num}:\n",
-       "        0.0\n",
-       "        0.0\n",
-       " (-2//1)*f₂*f₄*(f₁^-5)*(p₁^-1)*(p₂^2)*(q₁^-1)*(abs(f₁)^(1//2))*((1.0 - (f₂^2))^(-1//2)) - (f₃*(f₁^-4)*(p₁^-1)*(p₂^2)*(q₂^-1)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2))*((1//10) - ((2//5)*((1.0 - (f₂^2))^(-1//1))))) - (f₅*(f₁^-3)*(f₂^2)*(p₁^-1)*(p₂^2)*(q₃^-1)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)))\n",
-       "  (2//5)*f₂*f₃*(f₁^-4)*(p₁^-1)*(p₂^2)*(q₂^-1)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(-1//2)) - (f₂*f₅*(f₁^-3)*(p₁^-1)*(p₂^2)*(q₃^-1)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2))) - (f₄*(f₁^-5)*(p₁^-1)*(p₂^2)*(q₁^-1)*(abs(f₁)^(1//2))*(1 + f₂^2)*((1.0 - (f₂^2))^(-1//2)))\n",
-       "         f₅*(f₁^-3)*(p₁^-1)*(p₂^2)*(q₃^-1)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)) + f₃*(f₁^-3)*(p₁^-1)*(p₂^2)*(q₃^-1)*((-1//10) - ((2//5)*(f₂^2)*((1.0 - (f₂^2))^(-1//1))))*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)) - ((2//1)*f₂*f₄*(f₁^-5)*(p₁^-1)*(p₂^2)*(q₁^-1)*(abs(f₁)^(1//2))*((1.0 - (f₂^2))^(-1//2)))"
-      ]
-     },
-     "execution_count": 214,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@variables q[1:3]  \n",
-    "Is(f,p,q)"
+    "Is(f,p,q);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,21 +704,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×5 Matrix{Float64}:\n",
-       " 0.0  0.0   0.0        0.0      0.0\n",
-       " 0.0  0.0   0.0        0.0      0.0\n",
-       " 0.0  0.0  -3.76991    0.0      0.0\n",
-       " 0.0  0.0  -0.0      188.496    0.0\n",
-       " 0.0  0.0   1.25664    0.0    -12.5664"
+       " 0.0  0.0  0.0         0.0      0.0\n",
+       " 0.0  0.0  0.0         0.0      0.0\n",
+       " 0.0  0.0  2.82743     0.0     -0.0\n",
+       " 0.0  0.0  0.0       188.496   -0.0\n",
+       " 0.0  0.0  0.942478    0.0    -12.5664"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +741,7 @@
        "II (generic function with 2 methods)"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,54 +761,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{ComplexF64}:\n",
-       "     -0.4034721581221814 - 1.664125310078936e-16im\n",
-       "     -0.1157559089611886 - 7.736526334019546im\n",
-       "    -0.11575590896118837 + 7.736526334019548im\n",
-       " -0.00011033595199627655 + 5.788479532897586im\n",
-       " -0.00011033595199562604 - 5.788479532897584im"
+       "    -0.03635483368739229 - 1.6741211797103886e-16im\n",
+       "   -0.004221183858583721 + 7.744147602342941im\n",
+       "  -0.0042211838585832296 - 7.744147602342937im\n",
+       "  -0.0001082133336680613 + 5.788474724951153im\n",
+       " -0.00010821333366715731 - 5.788474724951156im"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "par_f = [-1,-0.5,-10]\n",
-    "par_s = [-1/15π, -1/1π, -0.01/1π]\n",
+    "par_s = [-1/15π, -1/1π, -0.1/1π]\n",
     "eigvals(10*im .* P(flu,c,par_f) - 1. .* II(flu,c,par_f,par_s))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{Float64}:\n",
-       " -6.544984694978735\n",
        " -0.019946620022792336\n",
-       " -0.0006527984734732038\n",
+       " -0.0004895988551049027\n",
        " -0.0\n",
-       "  0.0"
+       "  0.0\n",
+       "  0.006544984694978735"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eigvals(- II(flu,c,par_f,par_s))"
+    "eigvals(+ II(flu,c,par_f,par_s))"
    ]
   },
   {
