--- a/Principal_Symbol.ipynb
+++ b/Principal_Symbol.ipynb
@@ -885,29 +885,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{ComplexF64}:\n",
-       "   -0.6399139975304516 + 4.4128832455907966e-17im\n",
-       "  -0.05807870563768683 - 6.087825173306374im\n",
-       " -0.058078705637686245 + 6.087825173306366im\n",
-       "   0.02575844818036852 - 7.138451807429896im\n",
-       "  0.025758448180373428 + 7.138451807429888im"
+       "    -0.03635483368739229 - 1.6741211797103886e-16im\n",
+       "   -0.004221183858583721 + 7.744147602342941im\n",
+       "  -0.0042211838585832296 - 7.744147602342937im\n",
+       "  -0.0001082133336680613 + 5.788474724951153im\n",
+       " -0.00010821333366715731 - 5.788474724951156im"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "par_f = [-1,-2,-10]\n",
+    "par_f = [-1,-0.5,-10]\n",
     "par_s = [-1/15π, -1/1π, -0.1/1π]\n",
-    "eigvals(10*im .* P(flu,c,par_f) - II(flu,c,par_f,par_s))"
+    "eigvals(10*im .* P(flu,c,par_f) - 1.0 .*II(flu,c,par_f,par_s))"
    ]
   },
   {
